# LVSimple

./: ActiveContraction.C  BoundaryConditionsHV01.C  CMakeLists.txt  MechanicsModelHV01.C  ModelInitialization.C  README.md  input3dN96_20CM_HV01_T2.2_hex  main.C  tetVolumeCalculation.C
meshConversionHex/: Makefile  endoList.point  endoNodes.txt  exhgHex.C  fiberDir.txt  generate_endolist.m  heart_exodusII_hex.e  heart_real.1.node  heart_real_hex.xda  readme.md  sheetDir.txt
